--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,4 @@
-
 [submodule "depthai-core"]
-	path = depthai-core
+	path = computer_vision/YOLOv5/depthai-core
 	url = https://github.com/luxonis/depthai-core.git
 	branch = main
