--- a/.gitmodules
+++ b/.gitmodules
@@ -1,20 +1,20 @@
 [submodule "Computer-Vision"]
 	path = Computer-Vision
-	url = git@github.com:HanzeRacingDivision/Computer-Vision.git
+	url = https://github.com/HanzeRacingDivision/Computer-Vision.git
 	branch = main
 
 [submodule "Control"]
 	path = Control
-	url = git@github.com:HanzeRacingDivision/Control.git
+	url = https://github.com/HanzeRacingDivision/Control.git
 	branch = main
 
 [submodule "Emergency-System"]
 	path = Emergency-System
-	url = git@github.com:HanzeRacingDivision/Emergency-System.git
+	url = https://github.com/HanzeRacingDivision/Emergency-System.git
 	branch = main
 
 [submodule "Simulator"]
 	path = Simulator
-	url = git@github.com:HanzeRacingDivision/Simulator.git
+	url = https://github.com/HanzeRacingDivision/Simulator.git
 	branch = main
 
